--- a/style.css
+++ b/style.css
@@ -1,61 +1,89 @@
 .tutorial {
-    width: 600px;
-    text-align: center;
-    margin: auto;
-  }
-  
-  figure.image {
-    display: flex;
-    justify-content: center;
-    background-color: black;
-  }
+  width: 600px;
+  text-align: center;
+  margin: auto;
+}
 
-  p {
-      font-size: 14px;
-  }
-  
-  figure .image img {
-    margin-top: 10px ;
-    height: 200px;
-    width: 300px;
-  }
-  
-  .notification {
-    margin-top: 20px !important;
-  }
-  
-  .results {
-    max-height: 500px;
-    overflow-y: scroll;
-  }
-  
-  .title .icon {
-    margin-left: 15px;
-  }
-  
-  .hero {
-    margin-bottom: 20px;
-  }
-  
-  .forms {
-    display: flex;
-    justify-content: space-around;
-  }
-  
-  .dropdown-item {
-    display: flex;
-    align-items: center;
-    height: 60px;
-  }
-  
-  .dropdown-item img {
-    height: 50px;
-    margin-right: 10px;
-  }
+figure.image {
+  display: flex;
+  justify-content: center;
+  background-color: black;
+}
 
-  li {
-    text-align: center;
+p {
+    font-size: 14px;
+    font-family: "Open Sans";
+    color: black;
+}
+
+figure .image img {
+  margin-top: 10px ;
+  height: 200px;
+  width: 300px;
+}
+
+.notification {
+  margin-top: 20px !important;
+}
+
+.results {
+  max-height: 500px;
+  overflow-y: scroll;
+}
+
+.title .icon {
+  margin-left: 15px;
+}
+
+.title {
+  font-family: Alegreya;
+}
+.hero {
+  margin-bottom: 20px;
+}
+
+.forms {
+  display: flex;
+  justify-content: space-around;
+}
+
+.dropdown-item {
+  display: flex;
+  align-items: center;
+  height: 60px;
+}
+
+.dropdown-item img {
+  height: 50px;
+  margin-right: 10px;
+}
+
+li {
+  text-align: center;
+}
+
+
+
+
+
+.recipe {
+  margin: 1rem;
+}
+.summary {
+  margin: 2rem 0;
+}
+
+.img {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+@media only screen and (max-width: 768px) {
+  html, body {
+      overflow-x: hidden;
   }
-  .media {
-    
+  .img {
+      display: block;
   }
+}
